--- a/pplot/App.xaml
+++ b/pplot/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:pplot"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <sys:String x:Key="connectTo">192.168.20.17</sys:String> <!-- or "sim" or "127.0.0.1" -->
     </Application.Resources>
 </Application>
