--- a/pplot/App.xaml
+++ b/pplot/App.xaml
@@ -5,6 +5,6 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <sys:String x:Key="connectTo">192.168.20.17</sys:String> <!-- or "sim" or "127.0.0.1" -->
+        <sys:String x:Key="airportFile">C:/Sources/githib_svn/imgcollection/trunk/pplot/sydney.dat</sys:String> 
     </Application.Resources>
 </Application>
