--- a/pplot/MainWindow.xaml
+++ b/pplot/MainWindow.xaml
@@ -11,18 +11,30 @@
 
         <TabControl>
             <TabItem Header="Map">
-                <Grid >
-                    <m:Map  x:Name="mainmap"  CredentialsProvider="AlkF1YZk5OkMIqs-_P_cLGgaV0bKpNwtiZcPTrQPAABlyudnqkDSsbgiiY7qPMNn" Mode="Road"
+                <Grid Name="mapGrid">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="200" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <m:Map Grid.Column="0" Grid.Row="0" x:Name="mainmap"  CredentialsProvider="AlkF1YZk5OkMIqs-_P_cLGgaV0bKpNwtiZcPTrQPAABlyudnqkDSsbgiiY7qPMNn" Mode="Road"
                 Center="-33.930, 151.171" ZoomLevel="13" >
                         <Canvas Width="10" Height="10" 
               m:MapLayer.Position="-33.930, 151.171" 
               m:MapLayer.PositionOrigin="Center" Opacity="0.7" ToolTip="MapCenter">
                             <Path Data="M 0,0 L 10,0 10,10, 0,10, 0,0" Fill="Red" Stroke="Wheat" StrokeThickness="2" />
- 
+
                         </Canvas>
                     </m:Map>
+                    <Grid Name="dataGrid" Grid.Column="1" Grid.Row="0">
+ 
+                    </Grid>
+  
                 </Grid>
             </TabItem>
+            
             <TabItem Header="List">
                 <ListView Margin="10" Name="planelist">
                     <ListView.View>
@@ -42,7 +54,7 @@
                     </ListView.View>
                 </ListView>
             </TabItem>
-            <TabItem Header="Details" />
+            
         </TabControl>
 
      </Grid>
