--- a/pplot/App.xaml
+++ b/pplot/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:pplot"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             StartupUri="MainWindow.xaml">
+             StartupUri="ApWin.xaml">
     <Application.Resources>
      </Application.Resources>
 </Application>
