--- a/pplot/ApWin.xaml
+++ b/pplot/ApWin.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="pplot.MainWindow"
+﻿<Window x:Class="pplot.ApWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
         xmlns:local="clr-namespace:pplot"
         mc:Ignorable="d"
-        Title="MainWindow" Height="850" Width="1000">
+        Title="ApWin" Height="850" Width="1000">
     <Grid>
 
         <TabControl>
