--- a/WpfCoreTester/FileViewUC.xaml
+++ b/WpfCoreTester/FileViewUC.xaml
@@ -7,6 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <ScrollViewer>
         <WrapPanel Name="wp" />
+        </ScrollViewer>
     </Grid>
 </UserControl>
