jfxview under intellij/gradle

--- a/v2java/jsxview/src/main/resources/com/arenbee/jsxview/hello-view.fxml
+++ b/v2java/jsxview/src/main/resources/com/arenbee/jsxview/hello-view.fxml
@@ -37,7 +37,15 @@
                         </TabPane>
                      </children>
                   </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="356.0" prefWidth="528.0" />
+                <AnchorPane>
+                     <children>
+                        <ScrollPane fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <content>
+                              <ListView fx:id="instancesList" style="-fx-background-color: gray;" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </AnchorPane>
               </items>
             </SplitPane>
          </children>
